--- a/app/src/main/res/layout/fragment_interface.xml
+++ b/app/src/main/res/layout/fragment_interface.xml
@@ -10,7 +10,7 @@
         android:layout_width="340dp"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:hint="请输入19=6进制字符，最多20字节"
+        android:hint="请输入16进制字符，最多20字节"
         android:importantForAutofill="no"
         tools:ignore="HardcodedText" />
 
